# University_management_system

./: .gitignore  CMakeLists.txt  README.md
project _files/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  UI.cpp  UI.h  course.cpp  course.h  courseManagementMenu.cpp  courseManagementMenu.h  database.cpp  database.h  gradeManagementMenu.cpp  gradeManagementMenu.h  gradeResultsManagment.cpp  gradeResultsManagment.h  main.cpp  student.cpp  student.h  studentManagment.cpp  studentManagment.h  studentManagmentMenu.cpp  studentManagmentMenu.h
